--- a/index.html
+++ b/index.html
@@ -118,6 +118,16 @@
                     <button type="submit" id="submit-button">SUBMIT</button>
                 </form>
             </div>
+            <div id="footer">
+                <div id="navigation">
+                    <ul>
+                        <li><a href="#services">Privacy Policy</a></li>
+                        <li><a href="#team">Terms & Conditions</a></li>
+                        <li><span class="contact-header-label">Book Now!</span> <a href="tel: 1-778-385-6264">+1-778-385-6264</a> | <a href="mailto:info@bprimemedical.com" class="contact-header-link">info@bprimemedical.com</a></li>
+                    </ul>
+                </div>
+                <p></p>
+            </div>
         </div>
     </body>
 </html>
