--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <ul>
                         <li><a href="#services">Privacy Policy</a></li>
                         <li><a href="#team">Terms & Conditions</a></li>
-                        <li><span class="contact-header-label">Book Now!</span> <a href="tel: 1-778-385-6264">+1-778-385-6264</a> | <a href="mailto:info@bprimemedical.com" class="contact-header-link">info@bprimemedical.com</a></li>
+                        <li><a href="tel: 1-778-385-6264">+1-778-385-6264</a> | <a href="mailto:info@bprimemedical.com" class="contact-header-link">info@bprimemedical.com</a></li>
                     </ul>
                 </div>
                 <p></p>
