--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script src="scroll.js" type="text/javascript"></script>
+        <script>
+            $(document).ready( function() {
+    $("#load_privacy").on("click", function() {
+        $("#content").load("privacy.html");
+    });
+});
+        </script>
     </head>
 
     <body class="home-bg">
@@ -33,95 +40,97 @@
                     </ul>
                 </div>
             </div>
-            <div id="landing">
-                <img src="images/landing_photo.png" class="img-responsive center-block">
-            </div>
-            <div id="services">
-                <h1>SERVICES</h1>
-                <div class="container">
-                    <div class="col-xs-12 col-md-6 service-block service-block-left">
-                        <img src="images/clipboard.svg" class="service-icon" alt="consultation">
-                        <h2>CONSULTATION & EVALUATION</h2>
-                        <p>We offer our knowledge and expertise in the medical field. Before we come in to do Preventative Maintenance & Corrective Work, we like to analyze the situation and let you know what needs to be done before we do it. Clear and constant communication is one of our priorities.
-                            <br /> <br />
-                            Whether it is before or after clinical hours, we will come when it is most convenient for you. We will come visit your site on the same day as you contact us, guaranteed.</p>
-                        <h3>EMERGENCY &emsp;|&emsp; NON-EMERGENCY</h3>
-                    </div>
-                    <div class="col-xs-12 col-md-6 service-block service-block-right">
-                        <img src="images/screw.svg" class="service-icon" alt="consultation">
-                        <h2>PREVENTATIVE MAINTENANCE & EQUIPMENT REPAIR</h2>
-                        <p>Our Biomedical Engineering Technologists are trained and experienced in Preventative Maintenance and Equipment Repair. Preventative Maintenance can be annual device inspection and/or new device acceptance. Corrective Work is fancy for 'repair'.
-                            <br /> <br />
-                            In emergency cases where you need a device accepted or repaired right away, we will do whatever we can to get the job done as fast and as safely as possible.</p>
-                        <h3>EMERGENCY &emsp;|&emsp; NON-EMERGENCY</h3> 
-                    </div>
+            <div id="content">
+                <div id="landing">
+                    <img src="images/landing_photo.png" class="img-responsive center-block">
                 </div>
-            </div>
-            <div id="team">
-                <h1>MEET THE TEAM</h1>
-                <div id=subheader>
-                    <h2>OUR BIOMEDICAL ENGINEERING TECHNOLOGISTS HAVE BEEN IN HOSPITALS AND PRIVATE CLINICS
-                    </h2>
-                </div>
-                <div id="subsubheader">
-                    <h4>Our professional staff includes 5 Biomeds, each specialized in their own respective fields. 
-                        Together they bring perspective from all over the industry.                     </h4>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-15">
-                            <img src="images/emp1.png" class="emp-photos" alt="employee 1">
-                            <h4>Don T. <br />Founder, AScT, BMET</h4>
+                <div id="services">
+                    <h1>SERVICES</h1>
+                    <div class="container">
+                        <div class="col-xs-12 col-md-6 service-block service-block-left">
+                            <img src="images/clipboard.svg" class="service-icon" alt="consultation">
+                            <h2>CONSULTATION & EVALUATION</h2>
+                            <p>We offer our knowledge and expertise in the medical field. Before we come in to do Preventative Maintenance & Corrective Work, we like to analyze the situation and let you know what needs to be done before we do it. Clear and constant communication is one of our priorities.
+                                <br /> <br />
+                                Whether it is before or after clinical hours, we will come when it is most convenient for you. We will come visit your site on the same day as you contact us, guaranteed.</p>
+                            <h3>EMERGENCY &emsp;|&emsp; NON-EMERGENCY</h3>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-15">
-                            <img src="images/emp2.png" class="emp-photos" alt="employee 2">
-                            <h4>Jeffrey S. <br />B.Sc, BMET </h4>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-15">
-                            <img src="images/emp3.png" class="emp-photos" alt="employee 3">
-                            <h4>Paulo T. <br />BMET </h4>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-15">
-                            <img src="images/emp4.png" class="emp-photos" alt="employee 4">
-                            <h4>Felix L. <br />B.Sc, BMET </h4>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-15">
-                            <img src="images/emp5.png" class="emp-photos" alt="employee 5">
-                            <h4>Sunny C. <br />BMET </h4>
+                        <div class="col-xs-12 col-md-6 service-block service-block-right">
+                            <img src="images/screw.svg" class="service-icon" alt="consultation">
+                            <h2>PREVENTATIVE MAINTENANCE & EQUIPMENT REPAIR</h2>
+                            <p>Our Biomedical Engineering Technologists are trained and experienced in Preventative Maintenance and Equipment Repair. Preventative Maintenance can be annual device inspection and/or new device acceptance. Corrective Work is fancy for 'repair'.
+                                <br /> <br />
+                                In emergency cases where you need a device accepted or repaired right away, we will do whatever we can to get the job done as fast and as safely as possible.</p>
+                            <h3>EMERGENCY &emsp;|&emsp; NON-EMERGENCY</h3> 
                         </div>
                     </div>
                 </div>
-            </div>
-            <div id="contact">
-                <h1>GET IN TOUCH</h1>
-                <div id="contact-info">
-                    <h2><span class="contact-label">CALL US:</span> &emsp;&emsp;<a href="tel: 1-778-385-6264" id="link-no-decoration">+1 - 778 - 385 - 6264</a> <br />
-                        <span class="contact-label">EMAIL US:</span> &emsp; <a href="mailto:info@bprimemedical.com">info@bprimemedical.com</a></h2>
+                <div id="team">
+                    <h1>MEET THE TEAM</h1>
+                    <div id=subheader>
+                        <h2>OUR BIOMEDICAL ENGINEERING TECHNOLOGISTS HAVE BEEN IN HOSPITALS AND PRIVATE CLINICS
+                        </h2>
+                    </div>
+                    <div id="subsubheader">
+                        <h4>Our professional staff includes 5 Biomeds, each specialized in their own respective fields. 
+                            Together they bring perspective from all over the industry.                     </h4>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-15">
+                                <img src="images/emp1.png" class="emp-photos" alt="employee 1">
+                                <h4>Don T. <br />Founder, AScT, BMET</h4>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-15">
+                                <img src="images/emp2.png" class="emp-photos" alt="employee 2">
+                                <h4>Jeffrey S. <br />B.Sc, BMET </h4>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-15">
+                                <img src="images/emp3.png" class="emp-photos" alt="employee 3">
+                                <h4>Paulo T. <br />BMET </h4>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-15">
+                                <img src="images/emp4.png" class="emp-photos" alt="employee 4">
+                                <h4>Felix L. <br />B.Sc, BMET </h4>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-15">
+                                <img src="images/emp5.png" class="emp-photos" alt="employee 5">
+                                <h4>Sunny C. <br />BMET </h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <h2>or use our form here</h2>
-                <form action="//flipmail.co/api/xI0PW8W7cjC5noCwYWQM" method="post">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="InputName" name="name" placeholder="Name" required>
+                <div id="contact">
+                    <h1>GET IN TOUCH</h1>
+                    <div id="contact-info">
+                        <h2><span class="contact-label">CALL US:</span> &emsp;&emsp;<a href="tel: 1-778-385-6264" id="link-no-decoration">+1 - 778 - 385 - 6264</a> <br />
+                            <span class="contact-label">EMAIL US:</span> &emsp; <a href="mailto:info@bprimemedical.com">info@bprimemedical.com</a></h2>
                     </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control" id="InputEmail" name="email" placeholder="Email" required>
-                        <input type="hidden" name="_replyto" value="%email">
-                        <input type="hidden" name="_after" value="http://bprimemedical.com/confirmation">
-                        <input type="text" name="_honey" value="" style="display:none">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="InputSubject" name="_subject" placeholder="Subject" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" rows="6" id="InputMessage" name="message" placeholder="Type your message here" required></textarea >
-                    </div>
-                    <button type="submit" id="submit-button">SUBMIT</button>
-                </form>
+                    <h2>or use our form here</h2>
+                    <form action="//flipmail.co/api/xI0PW8W7cjC5noCwYWQM" method="post">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="InputName" name="name" placeholder="Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="InputEmail" name="email" placeholder="Email" required>
+                            <input type="hidden" name="_replyto" value="%email">
+                            <input type="hidden" name="_after" value="http://bprimemedical.com/confirmation">
+                            <input type="text" name="_honey" value="" style="display:none">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="InputSubject" name="_subject" placeholder="Subject" required>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" rows="6" id="InputMessage" name="message" placeholder="Type your message here" required></textarea >
+                        </div>
+                        <button type="submit" id="submit-button">SUBMIT</button>
+                    </form>
+                </div>
             </div>
             <div id="footer">
                 <div id="navigation">
                     <ul>
-                        <li><a href="#services">Privacy Policy</a></li>
+                        <li><a href="#" id="load_privacy">Privacy Policy</a></li>
                         <li><a href="#team">Terms & Conditions</a></li>
                         <li><a href="tel: 1-778-385-6264">+1-778-385-6264</a> | <a href="mailto:info@bprimemedical.com" class="contact-header-link">info@bprimemedical.com</a></li>
                     </ul>
