--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
     </head>
-    <body>
+    <body id="document">
         <h1>Privacy Policy</h1>
 
         <p id="fine">Thank you for visiting BPrime Medical Ltd.’s website and reviewing our Privacy Policy. Your privacy is important to us, and our policy is simple: we will collect no personally identifiable information about you when you visit our website unless you choose to provide that information. This Privacy Policy does not describe information collection practices on other sites, including those linked to or from the Web Site.
@@ -12,15 +12,15 @@
             At BPrime Medical, we are committed to providing our clients with exceptional service. As providing this service involves the collection, use and disclosure of some personal information about our clients and, customers’ protecting their personal information is one of our highest priorities.
             <br /><br />
             While we have always respected our clients and customers privacy and safeguarded their personal information, we have strengthened our commitment to protecting personal information as a result of British Columbia’s Personal Information Protection Act (PIPA). PIPA, which came into effect on January 1, 2004, sets out the ground rules for how B.C. businesses and not-for-profit organizations may collect, use and disclose personal information. We will inform our clients and customers of why and how we collect, use and disclose their personal information, obtain their consent where required, and only handle their personal information in a manner that a reasonable person would consider appropriate in the circumstances.
-<br /><br />
+            <br /><br />
             This Personal Information Protection Policy, in compliance with PIPA, outlines the principles and practices we will follow in protecting clients and customers personal information. Our privacy commitment includes ensuring the accuracy, confidentiality, and security of our clients and customers personal information and allowing our clients and customers to request access to, and correction of, their personal information.
 
             This Personal Information Protection Policy applies to BPrime Medical and its subsidiaries. This policy also applies to any service providers collecting, using or disclosing personal information on behalf of BPrime Medical
-<br /><br />
+            <br /><br />
             8.1 The Privacy Officer or designated individual is responsible for ensuring BPrime Medical compliance with this policy and the Personal Information Protection Act. 
 
             8.2 Clients and Customers should direct any complaints, concerns or questions regarding BPrime Medical compliance in writing to the Privacy Officer. If the Privacy Officer is unable to resolve the concern, the client and customer may also write to the Information and Privacy Commissioner of British Columbia. 
-<br /><br />
+            <br /><br />
             BPrime Medical Privacy Officer: Don Ta
         </p>
     </body>
