Added text decoration changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a href="/"><img src="images/BPrime_logo.png" class="img-responsive center-block" alt="logo"></a>
                 </div>
                 <div id="navigation">
-                    <ul>
+                    <ul class="links">
                         <li><a href="#services">services</a></li>
                         <li><a href="#team">team</a></li>
                         <li><a href="#contact">contact</a></li>
